:bug: Fixing login image not showing

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,237 +1,119 @@
-
 * {
-    font-family: 'Abel';
+  font-family: 'Abel';
 }
 
 :root {
-    --input-padding-x: 1.5rem;
-    --input-padding-y: 0.75rem;
-  }
-  
-  .login,
-  .image {
-    min-height: 100vh;
-  }
-  
-  .bg-image {
-    background-image: url('https://images.unsplash.com/photo-1605106702734-205df224ecce?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80');
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  --input-padding-x: 1.5rem;
+  --input-padding-y: 0.75rem;
+}
 
-  .login-heading {
-      font-weight: bold;
+.login,
+.image {
+  min-height: 100vh;
+}
+
+.bg-image {
+  background-image: url('../img/login-side-image.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.login-heading {
+  font-weight: bold;
+}
+
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+}
+
+.form-label-group {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.form-label-group > input,
+.form-label-group > label {
+  padding: var(--input-padding-y) var(--input-padding-x);
+  height: auto;
+  border-radius: 2rem;
+}
+
+.form-label-group > label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #495057;
+  cursor: text;
+  /* Match the input under the label */
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  transition: all 0.1s ease-in-out;
+}
+
+.form-label-group input::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input:-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-moz-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::placeholder {
+  color: transparent;
+}
+
+.form-label-group input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
+}
+
+.form-label-group input:not(:placeholder-shown) ~ label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
+
+.g-recaptcha {
+  display: flex;
+  justify-content: center;
+}
+
+/* Fallback for Edge
+  -------------------------------------------------- */
+
+@supports (-ms-ime-align: auto) {
+  .form-label-group > label {
+    display: none;
   }
-  
-  .btn-login {
-    font-size: 0.9rem;
-    letter-spacing: 0.05rem;
-    padding: 0.75rem 1rem;
-  }
-  
-  .form-label-group {
-    position: relative;
-    margin-bottom: 1rem;
-  }
-  
-  .form-label-group>input,
-  .form-label-group>label {
-    padding: var(--input-padding-y) var(--input-padding-x);
-    height: auto;
-    border-radius: 2rem;
-  }
-  
-  .form-label-group>label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    margin-bottom: 0;
-    /* Override default `<label>` margin */
-    line-height: 1.5;
-    color: #495057;
-    cursor: text;
-    /* Match the input under the label */
-    border: 1px solid transparent;
-    border-radius: .25rem;
-    transition: all .1s ease-in-out;
-  }
-  
-  .form-label-group input::-webkit-input-placeholder {
-    color: transparent;
-  }
-  
-  .form-label-group input:-ms-input-placeholder {
-    color: transparent;
-  }
-  
   .form-label-group input::-ms-input-placeholder {
-    color: transparent;
-  }
-  
-  .form-label-group input::-moz-placeholder {
-    color: transparent;
-  }
-  
-  .form-label-group input::placeholder {
-    color: transparent;
-  }
-  
-  .form-label-group input:not(:placeholder-shown) {
-    padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-    padding-bottom: calc(var(--input-padding-y) / 3);
-  }
-  
-  .form-label-group input:not(:placeholder-shown)~label {
-    padding-top: calc(var(--input-padding-y) / 3);
-    padding-bottom: calc(var(--input-padding-y) / 3);
-    font-size: 12px;
     color: #777;
   }
+}
 
-  .g-recaptcha {
-      display: flex;
-      justify-content: center;
-  }
-  
-  /* Fallback for Edge
+/* Fallback for IE
   -------------------------------------------------- */
-  
-  @supports (-ms-ime-align: auto) {
-    .form-label-group>label {
-      display: none;
-    }
-    .form-label-group input::-ms-input-placeholder {
-      color: #777;
-    }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .form-label-group > label {
+    display: none;
   }
-  
-  /* Fallback for IE
-  -------------------------------------------------- */
-  
-  @media all and (-ms-high-contrast: none),
-  (-ms-high-contrast: active) {
-    .form-label-group>label {
-      display: none;
-    }
-    .form-label-group input:-ms-input-placeholder {
-      color: #777;
-    }
+  .form-label-group input:-ms-input-placeholder {
+    color: #777;
   }
-
-
-/*
-.cuerpo{
-    width: 100%;
-    background-color: #003C71;
-    font-family: 'Abel';
-    display: grid;
-    grid-template-rows: repeat(3, 0.25fr);
 }
-
-img{
-    align-self: center;
-}
-
-.container{
-    grid-row-start: 2;
-    grid-row-end: 2;    
-    width: 100%;
-    height: 100%;
-    display:flex;
-    flex-wrap: wrap;
-    flex-flow: column;
-    justify-content: center;
-}
-
-.label-form{
-    font-size: large;
-    color: black;
-}
-
-#inicios{
-    align-self: center;
-    color: white;
-    font-family: 'Abel';
-    font-size: 4em;
-}
-
-#cardb{
-    display:flex;
-    flex-wrap: nowrap;
-    flex-flow: column;
-    justify-content: space-evenly;
-    height: 100%;
-}
-
-.card-group{
-    align-self: center;
-    width: 35%;
-
-}
-
-.hijos{
-    order: 5;
-}
-
-#btni{
-    width: 100%;
-}
-
-#olvido{
-    color: white;
-}
-
-#registrar{
-    color: white;
-}
-
-#espacio{
-    margin-top: 0.25em;
-    width: 35%;
-    align-self: center;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-evenly;
-}
-
-@media only screen and (max-width: 1389px) {
-    .cuerpo{
-        font-size: 0.75em;
-    }
-    .card-group{
-        align-self: center;
-        width: 45%;
-    
-    }
-}
-
-@media only screen and (max-width: 988px) {
-    .cuerpo{
-        font-size: 0.5em;
-    }
-    #espacio{
-        margin-top: -5em;
-        font-size: 1.25em;
-        align-self: center;
-        width: 75%;   
-
-
-    }
-    .card-group{
-        align-self: center;
-        width: 75%;
-    
-    }
-    #olvido{
-        margin-top: 5.25em;
-        font-size: 1.50em;
-    }
-    #registrar{
-        margin-top: 5em;
-        font-size: 1.50em;
-    }
-
-}
-
